Working now for picked as well