@@ -12,72 +12,43 @@ public class AutocompleteHW extends Autocomplete<List<String>> {
         super(dict_file, max);
         selectedCandidates = new HashMap<>();
     }
+    @Override
     public List<String> getCandidates(String prefix) {
         prefix = prefix.trim();
-
         int size = getMax();
-
         List<String> candidates = new ArrayList<>();
-        List<Integer> compares = new ArrayList<>();
         Queue<TrieNode<List<String>>> queue = new ArrayDeque<>();
         TrieNode<List<String>> start = find(prefix);
+
         if (start == null) return Collections.emptyList();
+
+        if (selectedCandidates.containsKey(prefix)) {
+            candidates.addAll(selectedCandidates.get(prefix));
+        }
 
         queue.add(start);
 
-        while (!queue.isEmpty()) {
-
-            if (candidates.size()>=size) break;
-
+        while (!queue.isEmpty() && candidates.size() < size) {
             TrieNode<List<String>> node = queue.remove();
 
-            if (node.isEndState()) {
-                if (node.getValue() != null) {
-                    if (node.getValue().get(1).equals(prefix)) {
-                        int index = 0;
-                        int compare = Integer.parseInt(node.getValue().get(0));
-                        if (compares.isEmpty()) {
-                            compares.add(0,compare);
-                            candidates.add(0,getWord(node));
-                        } else {
-                            while (index < compares.size() && compare > compares.get(index)){
-                                index++;
-                            }
-                            compares.add(index,compare);
-                            candidates.add(index, getWord(node));
-                        }
-                    }
-
-                } else {
-                    candidates.add(getWord(node));
-                }
+            if (node.isEndState() && !candidates.contains(getString(node))) {
+                candidates.add(getString(node));
             }
 
-            BFS(queue, node);
+            Map<Character, TrieNode<List<String>>> childrenMap = node.getChildrenMap();
+            for (Character c : new TreeSet<>(childrenMap.keySet())) {
+                TrieNode<List<String>> child = node.getChild(c);
+                queue.add(child);
+            }
         }
 
         return candidates;
     }
 
-        private void collectCandidates(TrieNode<List<String>> node, String prefix, List<String> candidates) {
-            if (candidates.size() >= getMax()) return;
 
-            if (node.isEndState() && !candidates.contains(prefix)) {
-                candidates.add(prefix);
-            }
-
-            PriorityQueue<Character> sortedChildren = new PriorityQueue<>(node.getChildrenMap().keySet());
-
-            while (!sortedChildren.isEmpty()) {
-                Character c = sortedChildren.poll();
-                TrieNode<List<String>> child = node.getChild(c);
-                collectCandidates(child, prefix + c, candidates);
-            }
-        }
-
-    private void BFS(Queue<TrieNode<List<String>>> queue, TrieNode<List<String>> node) {
+    private void BreadthFirstSearch(Queue<TrieNode<List<String>>> queue, TrieNode<List<String>> node) {
         Map<Character, TrieNode<List<String>>> childrenMap = node.getChildrenMap();
-        List<Character> sortedChildren = childrenMap.keySet().stream().sorted().collect(Collectors.toList());
+        List<Character> sortedChildren = childrenMap.keySet().stream().sorted().toList();
 
         for (Character c : sortedChildren) {
             TrieNode<List<String>> child = node.getChild(c);
@@ -85,7 +56,7 @@ public class AutocompleteHW extends Autocomplete<List<String>> {
         }
     }
 
-    private String getWord(TrieNode<List<String>> node) {
+    private String getString(TrieNode<List<String>> node) {
         StringBuilder word = new StringBuilder();
         TrieNode<List<String>> current = node;
 
@@ -98,7 +69,7 @@ public class AutocompleteHW extends Autocomplete<List<String>> {
     }
 
 
-        @Override
+    @Override
     public void pickCandidate(String prefix, String candidate) {
         selectedCandidates.putIfAbsent(prefix, new ArrayList<>());
         List<String> prefixCandidates = selectedCandidates.get(prefix);
